Old/Nextcloud/collabora.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: collabora
  labels:
    app: collabora
spec:
  selector:
    matchLabels:
      app: collabora
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: collabora
    spec:
      containers:
      - name: collabora
        image: collabora/code:21.11.3.4.1
        ports:
        - containerPort: 9980
          protocol: TCP
        # env: # env variables not necessary, as loolwsd.xml has all of that
        securityContext:
         capabilities:
           add:
             - MKNOD
        volumeMounts:
        - mountPath: /etc/coolwsd/coolwsd.xml
          name: collabora-data
      restartPolicy: Always
      volumes:
        - name: collabora-data
          hostPath:
            path: "/data/collabora_data/loolwsd.xml"
      nodeSelector:
        kubernetes.io/hostname: "htz1"
---
apiVersion: v1
kind: Service
metadata:
  name: collabora
spec:
  ports:
  - name: tcp
    targetPort: 9980
    port: 9980
  selector:
    app: collabora
