Old/Nextcloud/ingress.yaml
# apiVersion: extensions/v1beta1
# kind: Ingress
# metadata:
#   name: nextcloud
#   annotations:
#     kubernetes.io/ingress.class: traefik
#     traefik.frontend.rule.type: PathPrefixStrip
# spec:
#   rules:
#   - host: vieta.rudenspavasaris.id.lv
#     http:
#       paths:
#       - path: /
#         backend:
#           serviceName: nextcloud
#           servicePort: http
#   - host: doks.rudenspavasaris.id.lv
#     http:
#       paths:
#       - path: /
#         backend:
#           serviceName: collabora
#           servicePort: tcp

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: nextcloud
spec:
  entryPoints:
    - https
  routes:
  - match: Host(`vieta.rudenspavasaris.id.lv`)
    kind: Rule
    services:
    - name: nextcloud
      port: 80
      # port: 9000 # fpm
    middlewares:
    - name: strict-transport-security-header
    - name: nextcloud-redirect-https
  - match: Host(`doks.rudenspavasaris.id.lv`)
    kind: Rule
    services:
    - name: collabora
      port: 9980
  tls:
    certResolver: default
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: nextcloud-redirect-https
spec:
  redirectScheme:
    permanent: true
    scheme: https
  # redirectRegex:
  #   regex: ^http://vieta.rudenspavasaris.id.lv/(.*)
  #   replacement: https://vieta.rudenspavasaris.id.lv/${1}
